Implementing the Post Service back-end

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-spring.application.name=backend
+server.port=8081
+spring.data.mongodb.uri=mongodb://localhost:27017/instagram_clone
+spring.application.name=MailService
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=tharanga.sandun.kumara2000@gmail.com
+spring.mail.password=swbf ykkj kfue jsvk
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
