--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "multer": "^1.4.5-lts.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-modal": "^3.16.1",
+    "react-icons": "^5.4.0",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "swiper": "^11.1.14",
@@ -43,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "tailwindcss": "^3.4.14"
   }
 }
