--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-icons": "^5.4.0",
     "react-modal": "^3.16.3",
     "react-router-dom": "^6.27.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "swiper": "^11.1.14",
     "web-vitals": "^2.1.4"
   },
